[feature/ai-1]: add mappers and modify endpoint get task by search.